--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,7 +13,7 @@
         >
       </li>
       <li class="header__nav-item">
-        <a class="header--link" href="./libraty.html">My Library</a>
+        <a class="header--link" href="./library.html">My Library</a>
       </li>
     </ul>
     <button class="header__auth-btn" data-auth-modal-open>My Account</button>
