--- a/src/sass/_my-library.scss
+++ b/src/sass/_my-library.scss
@@ -135,7 +135,7 @@
         border-radius: 5px;
 
         padding: 0 0;
-    
+        cursor: pointer;
         background-color: transparent;
         color: #FFFFFF;
         border-color: #FFFFFF;
@@ -145,7 +145,7 @@
            
         text-align: center;
         text-transform: uppercase;
-
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         &:not(:last-child) {
                margin-right: 18px;
             }
@@ -175,6 +175,7 @@
             &:hover {
                 background-color: var(--accent-color);
                 border-color: var(--accent-color);
+                transform: scale(1.1);
             }
 }
 
@@ -183,7 +184,7 @@
     height: 44px;
 
     padding: 0 0;
-
+    cursor: pointer;
     border: 1px solid #FFFFFF;
         border-radius: 5px;
 
@@ -196,7 +197,7 @@
     
         text-align: center;
         text-transform: uppercase;
-
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         @media screen and (min-width: 768px) {
                 min-width: 152px;
                 min-height: 44px;
@@ -212,6 +213,7 @@
     &:hover {
             background-color: var(--accent-color);
             border-color: var(--accent-color);
+            transform: scale(1.1);
         }
     
 }
@@ -219,4 +221,9 @@
 .active {
     background-color: var(--accent-color);
     border-color: var(--accent-color);
+}
+.pagination {
+    visibility: hidden;
+    position: absolute;
+    pointer-events: none;
 }
