--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -9,7 +9,7 @@
     overflow: overlay;
     visibility: visible;
     opacity: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
