--- a/src/sass/_team-modal.scss
+++ b/src/sass/_team-modal.scss
@@ -10,7 +10,7 @@
     overflow: auto;
     visibility: visible;
     opacity: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
