--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -10,7 +10,8 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-   
+    
+    background-color: #283035;
     padding: 8px;
     border-radius: 50px;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);  
@@ -31,7 +32,8 @@
 }
 
 .pagination ul li {
-    color: #20B2AA;
+    color: #fff;
+    
     list-style: none;
     line-height: 45px;
     text-align: center;
@@ -76,7 +78,7 @@
 .pagination ul li.number:hover,
 .pagination ul li:first-child:hover,
 .pagination ul li:last-child:hover {
-    color: #fff;
+    color: #000;
     background: orange;
 }
 
